fix: update anchor links

--- a/src/pages/migrating/guide/develop.mdx
+++ b/src/pages/migrating/guide/develop.mdx
@@ -21,7 +21,7 @@ possible by detailing all of the updates below.
 
 <AnchorLink>Changelog</AnchorLink>
 <AnchorLink>Components</AnchorLink>
-<AnchorLink>Sass Modules</AnchorLink>
+<AnchorLink>Styles</AnchorLink>
 <AnchorLink>Color Tokens</AnchorLink>
 <AnchorLink>Theming</AnchorLink>
 <AnchorLink>CSS Grid</AnchorLink>
