minor content tweaks

--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -90,7 +90,7 @@ The layering model differs between the _light_ and _dark_ themes.
 </Row>
 
 <Caption>
-  Light theme layering model example in the shown in the White theme
+  Light theme layering model and example shown in the White theme.
 </Caption>
 
 <Row>
@@ -102,7 +102,7 @@ The layering model differs between the _light_ and _dark_ themes.
 </Row>
 
 <Caption>
-  Dark theme layering model example in the shown in the Gray 100 theme
+  Dark theme layering model and example shown in the Gray 100 theme.
 </Caption>
 
 <br />
@@ -227,7 +227,7 @@ All of the themes are available in
   </DoDont>
 <DoDont type="dont" colLg={6} caption="Avoid use of midtones.">
 
-![Avoid use of midtones.](images/Light_theme_04.png)
+![Gray 10 dropdown on a Gray 20 background](images/Light_theme_04.png)
 
   </DoDont>
 </DoDontRow>
@@ -270,12 +270,12 @@ All of the themes are available in
     colLg={6}
     caption="Gray 90 dropdown on Gray 100 background.">
 
-![Gray 10 dropdown on Gray 100 background.](images/Dark_theme_01_new.png)
+![Gray 90 dropdown on Gray 100 background](images/Dark_theme_01_new.png)
 
   </DoDont>
  <DoDont type="dont" colLg={6} caption="Do not apply components that are darker than the background unless using high-contrast mode.">
 
-![Dropdown showing incorrect color usage](images/Dark_theme_04_new.png)
+![Gray 100 dropdown on Gray 90 background]](images/Dark_theme_04_new.png)
 
   </DoDont>
 </DoDontRow>
@@ -376,12 +376,12 @@ or `active`.
 There are 10 main groups of color tokens. They are grouped by the common UI
 element they are applied too. Grouping tokens makes it easier to find and apply
 color tokens. There are a few core tokens that do not belong to the a group and
-stand as individual tokens like $overlay $highlight and $interactive.
+stand as individual tokens like `$overlay`, `$highlight`, and `$interactive`.
 
 | Token group | Applied to                                               |
 | ----------- | -------------------------------------------------------- |
 | Background  | Page or primary backgrounds                              |
-| Layer       | Any container that sets on top of a background           |
+| Layer       | Stacking containers or UI elements                       |
 | Field       | Form and input container backgrounds                     |
 | Border      | Dividers, rules, and borders between and around elements |
 | Text        | Type and type styles                                     |
@@ -391,17 +391,26 @@ stand as individual tokens like $overlay $highlight and $interactive.
 | Focus       | Focus states                                             |
 | Skeleton    | Skeleton states                                          |
 
+<br />
+
 #### Component tokens
 
-Some components have explicit color tokens to be used only with that particular
-component. These tokens are called _component tokens_. They are part of the
-component packages and not part of the elements package like the core color
-tokens. To find the tokens and values across the themes for each the components,
-visit their component page.
+Some components have their own explicit color tokens that are only used with
+that particular component. These types tokens are called _component tokens_.
+They lives with the components and not part of the core color token palette. To
+find the components tokens and values for each theme, visit their component
+style page.
 
 - Button
 - Tag
 - Notification
+
+<InlineNotification>
+
+**Coming soon:** Some component tokens may not be available on the component
+page yet. Check back later for updates.
+
+</InlineNotification>
 
 ## Interaction states
 
