fix(migration-docs): tightened up overview

--- a/src/pages/migrating/guide/overview.mdx
+++ b/src/pages/migrating/guide/overview.mdx
@@ -8,25 +8,15 @@ tabs: ['Overview', 'Design', 'Develop']
 
 <PageDescription>
 
-The Carbon v11 release includes quality of life updates for designers and
-developers, and with no brand updates, no product redesigns are required.
+Ready to make the migration to Carbon v11 Beta? There are breaking changes along
+with net new features that your product can now consume. Getting started with
+Carbon has never been easier!
 
 </PageDescription>
 
-<InlineNotification>
-
-**Note:** The Carbon v11 release is currently in beta release. Be on the lookout
-for the public preview release available in the coming months.
-
-</InlineNotification>
-
 <AnchorLinks>
-
-<AnchorLink>Overview</AnchorLink>
-<AnchorLink>Read</AnchorLink>
-<AnchorLink>Watch</AnchorLink>
-<AnchorLink>Release FAQs</AnchorLink>
-
+  <AnchorLink>Overview</AnchorLink>
+  <AnchorLink>Getting started</AnchorLink>
 </AnchorLinks>
 
 ## Overview
@@ -39,179 +29,52 @@ layout building in line with the design language.
 With no changes to the IBM Design Language, v11 will not require any
 brand-driven product redesigns.
 
-### What’s new
+Migrating to Carbon v11 comes with many changes to our system that will help
+designers and developers build faster, increase flexibility, and improve ease of
+use.
 
-- Theming: light/dark mode now available along with design token updates
-- Design Kits: TBD
-- Packages: a new one-package install is available through @carbon/react
-- Grid: CSS Grid support has landed to make it easier to build layouts
-- React: new one-package install along with new components and API updates
-- More consistent API: updating size props to be consistent across all
-  components
-- Semantic naming: renaming our color tokens to be more intuitive for their use
+### What’s changing
+
+- **APIs:** Size prop naming conventions have been updated to be consistent
+  across all components.
+- **Color tokens:** Existing \*\*\*\*tokens have been renamed to better reflect
+  their usage and new tokens have been added to fill existing color token gaps
+  in our system.
+- **Sass modules:** Carbon styles have been updated to use its own dedicated
+  package and is transitioning to Sass modules.
+- **Theming:** New support for inline theming and light or dark modes.
+- **Design kit:** A new v11 Beta kit has been created with color token updates
+  for testing purposes.
+- **Components:** A new one-package install along with new components and API
+  updates.
+- **Grid:** New CSS Grid support to make it easier to build layouts.
 
 ### What’s not changing
 
-- No changes to the IBM Design Language.
-- No need to redesign your UI.
-- Tokens that are changing will continue to work in v11.
+- There are no changes to the IBM Design Language.
+- Product UIs do not need to be visually redesigned.
+- Existing color tokens with name changes will continue to work in v11.
 - Assets that are deprecated in v10 will remain in v11 and will be removed in
   v12.
 
-## Read
+### Getting started
 
-<Row>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    title="Carbon’s 2021 release: April update"
-    author="Josh Black"
-    date="April 22, 2021"
-    href="https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea"
-    >
+Whether you are a designer or a developer, we have curated guidance ready for
+you as your team makes their migration. Dive in and start using v11 right now!
 
-![Carbon’s 2021 release: April update](images/carbon_2021-april-update.png)
+<Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+<ResourceCard
+	subTitle="I'm a designer: Get started"
+	href="/migrating/guide/design">
 
-</ArticleCard>
+</ResourceCard>
+<Column colLg={4} colMd={4} noGutterSm>
+<ResourceCard
+	subTitle="I'm a developer: Get started"
+	href="/migrating/guide/develop">
+
+</ResourceCard>
 </Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    title="What’s coming to Carbon in 2021"
-    author="Josh Black"
-    date="November 12, 2020"
-    href="https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a"
-    >
-
-![Carbon 2021 release](images/carbon_2021.png)
-
-</ArticleCard>
 </Column>
 </Row>
-
-## Watch
-
-As part of IBM's front-end developer educational series, FEDucation, Josh Black
-introduces the upcoming v11 release, its features, and how to get involved and
-provide feedback.
-
-<Video title="Carbon v11 video" vimeoId="567122059" />
-
-## Release FAQs
-
-### What are the benefits of Carbon v11 for me as a designer?
-
-- Token names have been updated for easier application. Names are more logical
-  and easier to apply without always having to refer to a guide.
-
-- Nothing visually has changed in any of the components, and so no redesign work
-  is required.
-
-### What are the benefits of Carbon v11 for me as a developer?
-
-- CSS grid provides easier implementation of layouts, support for sub-grid, and
-  other features that come along with this new technology.
-
-- CSS custom properties for theming (light mode / dark mode).
-
-- A significant reduction in compile times for most projects with the update to
-  Sass architecture.
-
-- Quality of life updates such as:
-
-  - Consistent component API across the board.
-  - Improvements to Sass structure for getting started and productive use
-    experiences.
-
-- New components:
-  - Cover a wider variety of use-cases in your product with some of our new
-    components.
-  - Easily build our more accessible experiences with our accessibility
-    component primitives.
-
-### What are the benefits to my product’s customers?
-
-- Light/dark mode support.
-- Faster time to develop new features.
-- New components added that can be used instead of being newly developed.
-- Accessibility primitives to help build more accessible experiences as early as
-  possible to the development process.
-- Faster load times due to smaller bundle sizes.
-- Faster time to develop new features
-- New components added that can be used to build off of instead of being newly
-  developed
-- Accessibility primitives to help build more accessible experiences as early as
-  possible in the development process
-
-### Do I need to update right away? If not, when will we need to update?
-
-- Carbon v11 includes functionality that may be a motivator for migration, but
-  teams can migrate to v11 when they have the bandwidth.
-
-- Teams that are using v10 today can continue to stay on v10 and everything that
-  is implemented will continue to work.
-
-### What will the Carbon team be supporting for v10?
-
-- No new functionality will be introduced in v10 after the v11 release.
-
-- We will continue to address high impact bugs that come up for the v10 release
-  after the v11 release.
-
-- We will continue to accept any contributions that look to address issues in
-  the v10 release if we are unable to get to them in time for your product
-  roadmap.
-
-### What is the rule for supporting deprecated assets?
-
-- Assets that were deprecated from v9 to v10 will be removed in v11.
-
-- Assets that are deprecated in v10 will remain in v11 and will be removed in
-  v12. While the timeline of v12 has not been set, the team’s intent is for
-  major versions to be at minimum 12 months apart.
-
-### Will I need to redesign my product?
-
-- Visually, nothing is changing.
-
-- There are system-side changes that will require changes to design specs and
-  code, like the token names update and inline theming.
-
-- Token names are largely a 1:1 update and very few tokens are keeping their v10
-  name. This means color tokens will have to be updated across assets.
-
-- We are hoping to be able to provide a script that can make these changes on
-  the code side automatically, however this has not been built or tested yet.
-
-### Why rename things instead of leaving things as they are?
-
-- Making these updates now creates a better system user experience and it sets
-  us up for growth and scale so new tokens can fit into the set more easily.
-
-- The new names imply the usage and so will be much easier to apply. For
-  example, `text-03` will be `text-placeholder`.
-
-### How big is the effort to migrate current Sketch designs to the v11 Sketch kit?
-
-- The Carbon Sketch files will automatically update to v11. Connected styles and
-  symbols will automatically receive the v11 updates once the library update is
-  accepted by the users in each design file.
-
-- If you’re not ready to update to v11, you can stop accepting library updates
-  to that file until you are ready.
-
-- Sketch files for v10 will be available in the GitHub archive but will no
-  longer be an attached library. There is no way to properly version Sketch
-  Cloud files. There is only the latest version.
-
-- The effort to update local/PAL assets depends on the structure of files. If
-  you are using the Carbon layer styles then the update will be automatic. If
-  you’re using hard values and just specing the token names, then you will need
-  to update your specs.
-
-- Read the
-  [Sketch documentation](https://www.sketch.com/docs/libraries/#updating-library-components)
-  for more details.
-
-### How big is the expected effort to migrate code to v11?
-
-_We'll have more on this once we have interviewed teams that have successfully
-migrated to v11._
