fix(migration-docs): page description on design page

--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -8,8 +8,8 @@ tabs: ['Overview', 'Design', 'Develop']
 
 <PageDescription>
 
-The transition from v10 to v11 includes updates and additions to color tokens
-and theming as well as introduces beta kits to experiment with.
+The transition from v10 to v11 includes updates and additions to color tokens,
+theming, and introduces beta kits to experiment with.
 
 </PageDescription>
 
